Changed naming conventions
